<resources>
    <string name="app_name">Denúncias</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="pagina1">Início</string>
    <string name="pagina2">Lei Nº 123</string>
    <string name="pagina3">Contatos</string>
    <string name="pagina4">Sobre</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec sapien orci. Nulla facilisi. Curabitur at finibus metus, sit amet efficitur lectus. Etiam ac euismod mi. Vestibulum faucibus convallis elit non scelerisque. Sed eget lacus et neque tempus laoreet. Ut eget enim fermentum, gravida orci vitae, rutrum enim.
        Duis rutrum hendrerit enim, eget mattis lacus malesuada eget. Sed sodales eget lorem eu pharetra. Maecenas eu facilisis velit, ac tempor leo. Proin blandit justo eu laoreet dapibus. Phasellus mollis sodales eros et pellentesque. Proin mattis pretium mi at consequat. Praesent volutpat laoreet diam et tincidunt. Vivamus quam est, sollicitudin volutpat egestas at, venenatis at lacus. Praesent risus odio, porttitor volutpat dignissim vitae, imperdiet non nunc. Morbi ipsum justo, ultrices sed nulla vitae, condimentum porta est. In convallis non risus non dignissim.
        Sed libero dolor, tristique sed pulvinar non, commodo porta sapien. Aenean lectus neque, eleifend consectetur maximus vitae, rutrum et ligula. In vulputate dui non feugiat auctor. Sed vel est ligula. Cras vitae ante quis velit pharetra ornare. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur semper placerat lorem nec viverra. Suspendisse id eleifend turpis. Nulla aliquet ullamcorper felis, vel tempus elit feugiat in. Phasellus fringilla magna eu enim semper, sed pharetra ligula semper. Donec et lorem a lacus egestas sollicitudin at sed dui.
    </string>
    <string name="sobre_batalhao">Sobre o Batalhão</string>
    <string name="lei">Lei da Falsa Denúncia</string>
    <string name="tipo_denuncia">Tipo de Ocorrência:</string>
    <string name="endereco">Endereço:</string>
    <string name="endereco_desc">Local da ocorrência</string>
    <string name="detalhes">Detalhes da ocorrência:</string>
    <string name="detalhes_desc">Digite os detalhes da ocorrência</string>

    <string-array name="selecao_ocorrencia">
        <item>Assalto</item>
        <item>Sequestro</item>
        <item>Homicídio</item>
        <item>Latrocínio</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="local_da_ocorr_ncia">Local da ocorrência</string>
    <string name="anexar_foto">Enviar com foto</string>
    <string name="insira_aqui_os_detalhes_da_ocorr_ncia">Insira aqui os detalhes da ocorrência</string>
    <string name="enviar_den_ncia">Enviar sem foto</string>
    <string name="enviar_localiza_o">Enviar Localização</string>
</resources>
